--- a/exercicio.css
+++ b/exercicio.css
@@ -1,14 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 .bg-title {
-    background-image: linear-gradient(to bottom right, brown, white, white, white, brown);
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    background-image: linear-gradient(to bottom right, white, white, white, );
+    background: url('img/baner.jpg') center no-repeat;
+    height: 31em;
+    background-size: cover;
 }
 
 .swiper-container {
@@ -90,4 +85,107 @@
     position: absolute;
     bottom: -42%;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), #fff);
+}
+
+
+/*-------------------------------------------------------------------------------------------*/
+
+html,
+body {
+    height: 100%;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+nav,
+main {
+    transition: transform 150ms ease-out;
+}
+
+nav {
+    z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 16em;
+    background-color: white;
+    transform: translateX(-16em);
+}
+
+nav.menu-active {
+    transform: translateX(0);
+}
+
+nav.menu-hover {
+    transform: translateX(-15em);
+}
+
+nav h1 {
+    z-index: 100;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: -65px;
+    height: 60px;
+    width: 65px;
+    line-height: 60px;
+    font-size: 0.8em;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: rgb(180, 31, 31);
+    text-transform: uppercase;
+    text-align: center;
+    background-color: white;
+    cursor: pointer;
+}
+
+nav h1:hover {
+    color: #353441;
+    background: #fff;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline-block;
+    padding: 0 1em;
+    width: 100%;
+    height: 60px;
+    color: black;
+    line-height: 60px;
+    background-color: white;
+    transition: all 0.5s ease-in;
+}
+
+nav li:nth-of-type(2n) {
+    background-color: white;
+}
+
+nav li:hover {
+    background: rgb(180, 31, 31);
+    color: white;
+}
+
+nav h1 i {
+    position: absolute;
+    transform-origin: 50% 50%;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: rgb(180, 31, 31);
+    transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
+}
+
+.nav h1 i:nth-child(3) {
+    top: 50%;
 }
