--- a/exercicio.css
+++ b/exercicio.css
@@ -2,7 +2,7 @@
 .bg-title {
     background-image: linear-gradient(to bottom right, white, white, white, );
     background: url('img/baner.jpg') center no-repeat;
-    height: 31em;
+    height: 34em;
     background-size: cover;
 }
 
@@ -178,7 +178,7 @@ nav h1 i {
     position: absolute;
     transform-origin: 50% 50%;
     width: 100%;
-    height: 2px;
+    height: 1px;
     left: 0;
     right: 0;
     margin: auto;
@@ -188,4 +188,19 @@ nav h1 i {
 
 .nav h1 i:nth-child(3) {
     top: 50%;
+}
+
+ ::-webkit-scrollbar {
+    width: 11px;
+    height: 11px;
+}
+
+ ::-webkit-scrollbar-track {
+    border: 3px solid white;
+    box-shadow: inset 0 0 2.5px 2px rgb(180, 31, 31);
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient( 45deg, rgb(180, 31, 31), #FF4500);
+    border-radius: 2px;
 }
