--- a/exercicio.css
+++ b/exercicio.css
@@ -2,7 +2,7 @@
 .bg-title {
     background-image: linear-gradient(to bottom right, white, white, white, );
     background: url('img/baner.jpg') center no-repeat;
-    height: 34em;
+    height: 36em;
     background-size: cover;
 }
 
@@ -203,4 +203,11 @@ nav h1 i {
 ::-webkit-scrollbar-thumb {
     background: linear-gradient( 45deg, rgb(180, 31, 31), #FF4500);
     border-radius: 2px;
+}
+
+hr {
+    border: 0;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, transparent, rgb(180, 31, 31), transparent);
 }
