--- a/exercicio.css
+++ b/exercicio.css
@@ -211,3 +211,113 @@ hr {
     height: 2px;
     background-image: linear-gradient(to right, transparent, rgb(180, 31, 31), transparent);
 }
+
+
+/*----------------------------------------------------------------------------------------------------*/
+
+body {
+    margin: 0;
+    height: 2000px;
+}
+
+.icon-bar {
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 60px;
+    margin-left: 96.5%;
+}
+
+.icon-bar a {
+    display: block;
+    text-align: center;
+    padding: 15px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+    margin-left: 9px;
+}
+
+.icon-bar a:hover {
+    background-color: #000;
+}
+
+.facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.google {
+    background: #dd4b39;
+    color: white;
+}
+
+.linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.content {
+    margin-left: 75px;
+    font-size: 30px;
+}
+
+.theme-title {
+    position: relative;
+}
+
+.theme-title h6 {
+    text-transform: uppercase;
+    margin-bottom: 18px;
+    color: #303030;
+}
+
+.theme-title h2 {
+    line-height: 54px;
+}
+
+.theme-title p {
+    font-size: 18px;
+    line-height: 32px;
+    color: #303030;
+    margin-top: 15px;
+}
+
+.theme-title a.theme-button {
+    width: 200px;
+    line-height: 46px;
+    font-weight: 500;
+    border: 2px solid #e4e9ef;
+    color: #282828;
+    position: absolute;
+    right: 0;
+    top: 25px;
+}
+
+.theme-title a.theme-button:hover {
+    color: #fff;
+}
+
+body .theme-button {
+    line-height: 50px;
+    border-radius: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    font-size: 14px;
+}
+
+
+/*---------------------------------------------------------------------------------------------------------*/
