--- a/exercicio.css
+++ b/exercicio.css
@@ -321,3 +321,8 @@ body .theme-button {
 
 
 /*---------------------------------------------------------------------------------------------------------*/
+
+.reser {
+    margin-left: 120px;
+    border: 5px;
+}
